build: Embed extra `ruff` calls in `generate-schema-wrapper` into the python script
Hopefully solves: https://github.com/vega/altair/actions/runs/9456437889/job/26048327764?pr=3431

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -112,12 +112,7 @@ installer = "uv"
 generate-schema-wrapper = [
     "mypy tools/schemapi/schemapi.py",
     "python tools/generate_schema_wrapper.py",
-    "ruff check altair/vegalite/v?/schema --fix --exit-zero",
-    "ruff format altair/vegalite/v?/schema",
-    "ruff check altair/vegalite/v?/schema --fix --select I001 --select I002",
-    #"ruff check altair/vegalite/v?/schema --statistics --exit-zero",
-    "ruff format .",
-    #"test"
+    "test"
 ]
 test = [
     "ruff check .",
