--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,15 +8,16 @@ jobs:
     name: ruff-mypy
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v4
+    - name: Set up Python 3.12
+      uses: actions/setup-python@v5
       with:
-        python-version: "3.10"
+        python-version: "3.12"
     # Installing all dependencies and not just the linters as mypy needs them for type checking
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install ".[all, dev]"
+        pip install uv
+        uv pip install ".[all, dev]"
     - name: Lint with ruff
       run: |        
         ruff check .        
