--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -17,6 +17,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install uv
+        uv venv
         uv pip install ".[all, dev]"
     - name: Lint with ruff
       run: |        
