ci: pin `numpy<2.0.0`
[numpy 2.0.0](https://github.com/numpy/numpy/releases/tag/v2.0.0) is now released.

See [numpy-2-migration-guide](https://numpy.org/devdocs/numpy_2_0_migration_guide.html)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ dependencies = [
     "jinja2",
     # If you update the minimum required jsonschema version, also update it in build.yml
     "jsonschema>=3.0",
-    "numpy",
+    "numpy<2.0.0",
     # If you update the minimum required pandas version, also update it in build.yml
     "pandas>=0.25",
     "toolz",
