--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,22 +8,22 @@ jobs:
     name: ruff-mypy
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python 3.10
+    - name: Set up Python 3.12
       uses: actions/setup-python@v5
       with:
-        python-version: "3.10"
+        python-version: "3.12"
     # Installing all dependencies and not just the linters as mypy needs them for type checking
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install ".[all, dev]"
+        pip install hatch
     - name: Lint with ruff
       run: |        
-        ruff check .        
+        hatch run ruff check .        
     - name: Check formatting with ruff
       run: |
-        ruff format --diff .
-        ruff format --check .
+        hatch run ruff format --diff .
+        hatch run ruff format --check .
     - name: Lint with mypy
       run: |
-        mypy altair tests
+        hatch run mypy altair tests
