perf: Fix issues with `Chart|LayerChart.encode`, 1.32x speedup to `infer_encoding_types` (#3444)
* fix, doc, perf: Fix issues with `Chart|LayerChart.encode`, 1.33x speedup to `infer_encoding_types`

Fixes:
- [Sphinx warning](https://altair-viz.github.io/user_guide/generated/toplevel/altair.Chart.html#altair.Chart) on `Chart.encode`. Also incorrectly under `Attributes` section
- Preserve static typing previously found in `_encode_signature` but lost after `_EncodingMixin.encode`
  - Re-running `mypy` output 'Found 63 errors in 47 files (checked 360 source files)', tests/examples

Perf:
- This was a response to the `TODO` left at the top of `infer_encoding_types`
- Will be adding the benchmark to the PR description

* fix(typing): Resolve assignment type errors revealed

Incompatible types in assignment (expression has type "Chart", variable has type "DataFrame")

* fix(typing): Resolve direct arg-type errors revealed

`Color` -> `Fill` when passed to `fill` channel

* fix(typing): Resolve `alt.condition` overload-related arg-type errors revealed

'error: Argument "color" to "encode" of "_EncodingMixin" has incompatible type "dict[Any, Any] | SchemaBase"; expected "str | Color | dict[Any, Any] | ColorDatum | ColorValue | UndefinedType"  [arg-type]'

* test: update `infer_encoding_types` tests

- New implementation does not use `**kwargs`, which eliminates an entire class of tests based on `.encode(invalidChannel=...)` as these now trigger a runtime error

* test: Rename `invalidChannel` to `invalidArgument`

Fixes https://github.com/vega/altair/pull/3444/files/e4ab7052e9a1e62ff1fd80379864489c69a1e020#r1657008627

* chore: remove PR note comment

Fixes https://github.com/vega/altair/pull/3444#discussion_r1657014594

* docs: fix typo

* Exclude LookupData export from core.py to fix issue with mypy where it assumes that altair.LookupData comes from core.py instead of api.py

* Remove 'pd' and 'jsonschema' from __init__.py __all__. U

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -216,6 +216,8 @@ extend-safe-fixes=[
     "EM102",
     # trailing-whitespace
     "W291",
+    # blank line contains whitespace
+    "W293"
 ]
 
 # https://docs.astral.sh/ruff/preview/#using-rules-that-are-in-preview
