--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,10 +19,8 @@ dependencies = [
     "jinja2",
     # If you update the minimum required jsonschema version, also update it in build.yml
     "jsonschema>=3.0",
-    "numpy<2.0.0",
-    # If you update the minimum required pandas version, also update it in build.yml
-    "pandas>=0.25",
-    "packaging"
+    "packaging",
+    "narwhals>=1.0.0"
 ]
 description = "Vega-Altair: A declarative statistical visualization library for Python."
 readme = "README.md"
@@ -59,6 +57,8 @@ Source = "https://github.com/vega/altair"
 all = [
     "vega_datasets>=0.9.0",
     "vl-convert-python>=1.3.0",
+    "pandas>=0.25.3",
+    "numpy<2.0.0",
     "pyarrow>=11",
     "vegafusion[embed]>=1.6.6",
     "anywidget>=0.9.0",
@@ -68,6 +68,7 @@ dev = [
     "hatch",
     "ruff>=0.5.1",
     "ipython",
+    "pandas>=0.25.3",
     "pytest",
     "pytest-cov",
     "pytest-xdist[psutil]~=3.5",
@@ -77,6 +78,7 @@ dev = [
     "types-jsonschema",
     "types-setuptools",
     "geopandas",
+    "polars>=0.20.3",
 ]
 doc = [
     "sphinx",
