feat(typing): Ban `typing.Optional` import using `ruff`
The user will see this message ```
altair\utils\data.py:17:5: TID251 `typing.Optional` is banned: Use `Union[T, None]` instead. `typing.Optional` is likely to be confused with `altair.Optional`, which have similar but different semantic meaning. See https://github.com/vega/altair/pull/3449 Found 1 error.
```

Partial fix for https://github.com/vega/altair/pull/3452#discussion_r1663857513

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -319,6 +319,10 @@ unfixable= [
 [tool.ruff.lint.mccabe]
 max-complexity = 18
 
+[tool.ruff.lint.flake8-tidy-imports.banned-api]
+# https://docs.astral.sh/ruff/settings/#lint_flake8-tidy-imports_banned-api
+"typing.Optional".msg = "Use `Union[T, None]` instead.\n`typing.Optional` is likely to be confused with `altair.Optional`, which have similar but different semantic meaning.\nSee https://github.com/vega/altair/pull/3449"
+
 [tool.ruff.format]
 quote-style = "double"
 indent-style = "space"
