ci(ruff): remove `/v?/schema` from exclude, mark `__all__` sort fix as safe

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -190,8 +190,7 @@ exclude = [
     "__pycache__",
     "tests/examples_arguments_syntax",
     "tests/examples_methods_syntax",
-    "tests/test_transformed_data.py",    
-    "altair/vegalite/v?/schema",
+    "tests/test_transformed_data.py",
 ]
 
 [tool.ruff.lint]
@@ -217,7 +216,9 @@ extend-safe-fixes=[
     # trailing-whitespace
     "W291",
     # blank line contains whitespace
-    "W293"
+    "W293",
+    # unsorted-dunder-all
+    "RUF022",
 ]
 
 # https://docs.astral.sh/ruff/preview/#using-rules-that-are-in-preview
