--- a/pyproject.toml
+++ b/pyproject.toml
@@ -353,6 +353,7 @@ module = [
     "geopandas.*",
     "nbformat.*",
     "ipykernel.*",
+    "ibis.*",
     "m2r.*",
     # This refers to schemapi in the tools folder which is imported
     # by the tools scripts such as generate_schema_wrapper.py
