--- a/pyproject.toml
+++ b/pyproject.toml
@@ -339,6 +339,7 @@ addopts = ["--numprocesses=logical"]
 
 [tool.mypy]
 warn_unused_ignores = true
+pretty = true
 
 [[tool.mypy.overrides]]
 module = [
