refactor(typing): reduce type ignores in `api.py` (#3480)
* refactor(typing): reduce type ignores in `api.py`

* feat(typing): adds `_is_undefined` guard

Direct copy from another PR, but is helpful here https://github.com/dangotbanned/altair/blob/d607c70824860ef3478d7d3996d26dc516d69369/altair/vegalite/v5/api.py#L504

* fix(typing): `ignore[index]` from #3455

* fix(typing): `[ignore[arg-type]` from #3452

* refactor(typing): use `_is_undefined` in some cases

* refactor: reduce code duplication in `Chart.to_dict`

* fix(typing): Recover `TopLevelMixin.resolve_` return types

I removed these in 6adf564855f627f5d418c0b3ff73c9bb070e61a7 due to how complex they were getting, but both `mypy` and `pyright` seem happy with this solution

* fix(typing): narrow annotated types for `_check_if_valid_subspec`

Following investigation during https://github.com/vega/altair/pull/3480#discussion_r1680848075

* refactor: remove unused `_wrapper_classes` argument from `SchemaBase`

Fixes:
- https://github.com/vega/altair/pull/3480#discussion_r1681449076
- https://github.com/vega/altair/pull/3480#discussion_r1679705132
- https://github.com/vega/altair/pull/3480#discussion_r1679690735

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -334,6 +334,7 @@ addopts = ["--numprocesses=logical"]
 
 [tool.mypy]
 warn_unused_ignores = true
+pretty = true
 
 [[tool.mypy.overrides]]
 module = [
