ci(ruff): add `numpy` rules
https://docs.astral.sh/ruff/rules/#numpy-specific-rules-npy

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -305,6 +305,8 @@ select = [
     "D",
     # multi-line-summary-second-line
     "D213",
+    # numpy-specific-rules
+    "NPY",
 ]
 ignore = [  
     # Whitespace before ':'
