--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,7 +58,7 @@ all = [
     "vega_datasets>=0.9.0",
     "vl-convert-python>=1.5.0",
     "pandas>=0.25.3",
-    "numpy<2.0.0",
+    "numpy",
     "pyarrow>=11",
     "vegafusion[embed]>=1.6.6",
     "anywidget>=0.9.0",
