ci: replace `m2r` with `mistune` in `dev`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,7 +73,7 @@ dev = [
     "pytest",
     "pytest-cov",
     "pytest-xdist[psutil]~=3.5",
-    "m2r",
+    "mistune",
     "mypy",
     "pandas-stubs",
     "types-jsonschema",
