ci: Keep `docutils` for tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,6 +74,7 @@ dev = [
     "pytest-cov",
     "pytest-xdist[psutil]~=3.5",
     "mistune",
+    "docutils",
     "mypy",
     "pandas-stubs",
     "types-jsonschema",
