--- a/pyproject.toml
+++ b/pyproject.toml
@@ -229,7 +229,9 @@ extend-safe-fixes=[
     # escape-sequence-in-docstring
     "D301",
     # ends-in-period
-    "D400"
+    "D400",
+    # missing-return-type-special-method 
+    "ANN204"
 ]
 
 # https://docs.astral.sh/ruff/preview/#using-rules-that-are-in-preview
@@ -307,6 +309,7 @@ select = [
     "D213",
     # numpy-specific-rules
     "NPY",
+    "ANN"
 ]
 ignore = [  
     # Whitespace before ':'
@@ -351,6 +354,9 @@ ignore = [
     "D413",
     # doc-line-too-long
     "W505",
+    "ANN002", # args
+    "ANN003", # kwargs
+    "ANN401" # Any
 ]
 # https://docs.astral.sh/ruff/settings/#lintpydocstyle
 pydocstyle={ convention="numpy" }
@@ -360,6 +366,9 @@ mccabe={ max-complexity=18 }
 [tool.ruff.lint.flake8-tidy-imports.banned-api]
 # https://docs.astral.sh/ruff/settings/#lint_flake8-tidy-imports_banned-api
 "typing.Optional".msg = "Use `Union[T, None]` instead.\n`typing.Optional` is likely to be confused with `altair.Optional`, which have a similar but different semantic meaning.\nSee https://github.com/vega/altair/pull/3449"
+
+[tool.ruff.lint.per-file-ignores]
+"!altair/vegalite/v5/api.py" = ["ANN"]
 
 
 [tool.ruff.format]
