feat(typing): Fully annotate `api.py` (#3508)
* ci(ruff): Add `ANN` rules for `api.py` only

To highlight all the missing annotations to fix and autofix `None` return

* feat(typing): Complete annotations for most `api` functions

Excluding `*args` on `ChartType` wrappers. They need to be defined in alignment in multiple places, which is more complex

* feat(typing): Annotate more expr/params in `api`

* feat(typing): Various changes to enforce `dict[str, Any]` instead of `dict`

Among these, many locations already assume `str` keys in the implementation - without checking

* feat(typing): Misc minor method annotations

* feat(typing): Use `ChartType` in all `ChartType` dunder methods

* fix(ruff): Ignore some `ANN` rules that won't be fixed

* chore: add pyright ignore from #3492

* feat(typing): Improve `ChartType` constructor/factory annotations

* feat(typing): Annotate remaining functions in `api`

* feat(typing): Complete `RepeatChart` annotations

* fix(typing): Resolve Liskov violations

```
altair\vegalite\v5\api.py:4368: error: Argument 1 of "__iadd__" is incompatible with "__add__" of supertype "TopLevelMixin"; supertype defines the argument type as "Chart | RepeatChart | ConcatChart | HConcatChart | VConcatChart | FacetChart | LayerChart"  [override]         def __iadd__(self, other: LayerChart | Chart) -> Self:                            ^~~~~~~~~~~~~~~~~~~~~~~~~ altair\vegalite\v5\api.py:4368: note: This violates the Liskov substitution principle altair\vegalite\v5\api.py:4368: note: See https://mypy.readthedocs.io/en/stable/common_issues.html#incompatible-overrides altair\vegalite\v5\api.py:4376: error: Argument 1 of "__add__" is incompatible with supertype "TopLevelMixin"; supertype defines the argument type as "Chart | RepeatChart | ConcatChart | HConcatChart | VConcatChart | FacetChart | LayerChart"  [override]         def __add__(self, other: LayerChart | Chart) -> Self:                           ^~~~~~~~~~~~~~~~~~~~

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -229,7 +229,9 @@ extend-safe-fixes=[
     # escape-sequence-in-docstring
     "D301",
     # ends-in-period
-    "D400"
+    "D400",
+    # missing-return-type-special-method 
+    "ANN204"
 ]
 
 # https://docs.astral.sh/ruff/preview/#using-rules-that-are-in-preview
@@ -307,6 +309,8 @@ select = [
     "D213",
     # numpy-specific-rules
     "NPY",
+    # flake8-annotations
+    "ANN",
 ]
 ignore = [  
     # Whitespace before ':'
@@ -351,6 +355,8 @@ ignore = [
     "D413",
     # doc-line-too-long
     "W505",
+    # Any as annotation
+    "ANN401" 
 ]
 # https://docs.astral.sh/ruff/settings/#lintpydocstyle
 pydocstyle={ convention="numpy" }
@@ -360,6 +366,10 @@ mccabe={ max-complexity=18 }
 [tool.ruff.lint.flake8-tidy-imports.banned-api]
 # https://docs.astral.sh/ruff/settings/#lint_flake8-tidy-imports_banned-api
 "typing.Optional".msg = "Use `Union[T, None]` instead.\n`typing.Optional` is likely to be confused with `altair.Optional`, which have a similar but different semantic meaning.\nSee https://github.com/vega/altair/pull/3449"
+
+[tool.ruff.lint.per-file-ignores]
+# Only enforce type annotation rules on public api
+"!altair/vegalite/v5/api.py" = ["ANN"]
 
 
 [tool.ruff.format]
