ci: Introduce `vl_convert` dependency to GH `Test that schema generation has no effect`
https://github.com/vega/altair/issues/3519#issuecomment-2267875356

https://github.com/vega/altair/actions/runs/10263632193/job/28395892206?pr=3523

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,6 +42,7 @@ jobs:
           pip install pandas==0.25.3 numpy==1.17.5
       - name: Test that schema generation has no effect
         run: |
+          pip install vl-convert-python
           python tools/generate_schema_wrapper.py
           # This gets the paths of all files which were either deleted, modified
           # or are not yet tracked by Git
