ci: Bump `sphinx>=8.0.0`
Possibly resolves issue https://github.com/vega/altair/pull/3515#discussion_r1706725275

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,7 +82,7 @@ dev = [
     "polars>=0.20.3",
 ]
 doc = [
-    "sphinx",
+    "sphinx>=8.0.0",
     "docutils",
     "sphinxext_altair",
     "jinja2",
