ci: Bump `sphinx`, `vl-convert-python` (#3527)
* ci: Bump `vl-convert-python>=1.6.0`

Likely the source of https://github.com/vega/altair/pull/3523#issuecomment-2271764729

* ci: Bump `sphinx>=8.0.0`

Possibly resolves issue https://github.com/vega/altair/pull/3515#discussion_r1706725275

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,7 +56,7 @@ Source = "https://github.com/vega/altair"
 [project.optional-dependencies]
 all = [
     "vega_datasets>=0.9.0",
-    "vl-convert-python>=1.5.0",
+    "vl-convert-python>=1.6.0",
     "pandas>=0.25.3",
     "numpy",
     "pyarrow>=11",
@@ -82,7 +82,7 @@ dev = [
     "polars>=0.20.3",
 ]
 doc = [
-    "sphinx",
+    "sphinx>=8.0.0",
     "docutils",
     "sphinxext_altair",
     "jinja2",
