feat: Adds `vega-themes.json` using `vl_convert` (#3523)
* feat: Adds `vega-themes.json` using `vl_convert`

https://github.com/vega/altair/issues/3519#issuecomment-2267875356

* Update vega-themes.json

* fix: Force LF

* fix: Use `sort_keys` for deterministic `vega-themes.json`

* build: run `generate-schema-wrapper`

* ci: Introduce `vl_convert` dependency to GH `Test that schema generation has no effect`

https://github.com/vega/altair/issues/3519#issuecomment-2267875356

https://github.com/vega/altair/actions/runs/10263632193/job/28395892206?pr=3523

* ci: Output diff when schema generation has an effect

Not sure of the right command here, as I can't repro locally

* ci: Change gitattributes to always LF

* fix: re-run with fresh env

https://github.com/vega/altair/pull/3523#discussion_r1705482605

* feat(typing): Generate `VegaThemes` alias

Resolves the *long-term* solution mentioned in https://github.com/vega/altair/issues/3519#issue-2447214476

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,6 +42,7 @@ jobs:
           pip install pandas==0.25.3 numpy==1.17.5
       - name: Test that schema generation has no effect
         run: |
+          pip install vl-convert-python
           python tools/generate_schema_wrapper.py
           # This gets the paths of all files which were either deleted, modified
           # or are not yet tracked by Git
@@ -60,6 +61,7 @@ jobs:
           if [ ${#files_cleaned[@]} -gt 0 ]; then
               echo "The code generation modified the following files:"
               echo $files
+              git diff
               exit 1
           fi
       - name: Test with pytest
