ci(ruff): Enforce a lower `C901` limit
https://docs.astral.sh/ruff/settings/#lint_mccabe_max-complexity
Previously 18, the default is 10.

As this rule was not in `[tool.ruff.lint.select]`, it was not used.

Setting such a high limit hides opportunities to simplify large, complex functions.
Many cases were resolved/improved in #3431.
The remainder can use the *# noqa: C901* comment to serve as a TODO

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -313,6 +313,8 @@ select = [
     "ANN",
     # unsorted-imports
     "I001",
+    # complex-structure
+    "C901",
 ]
 ignore = [  
     # Whitespace before ':'
@@ -360,7 +362,7 @@ ignore = [
 ]
 # https://docs.astral.sh/ruff/settings/#lintpydocstyle
 pydocstyle={ convention="numpy" }
-mccabe={ max-complexity=18 }
+mccabe={ max-complexity=10 }
 
 [tool.ruff.lint.isort]
 classes = ["expr", "datum"]
@@ -386,6 +388,7 @@ See https://github.com/vega/altair/pull/3449
 [tool.ruff.lint.per-file-ignores]
 # Only enforce type annotation rules on public api
 "!altair/vegalite/v5/api.py" = ["ANN"]
+"tests/**/*.py"= ["C901"]
 
 
 [tool.ruff.format]
