ci(ruff): Add comment Re: tests
Ideally tests would be split up enough to not fail this lint, but not a major issue

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -388,6 +388,7 @@ See https://github.com/vega/altair/pull/3449
 [tool.ruff.lint.per-file-ignores]
 # Only enforce type annotation rules on public api
 "!altair/vegalite/v5/api.py" = ["ANN"]
+# Allow complex if/elif branching during tests
 "tests/**/*.py"= ["C901"]
 
 
