ci(ruff): Explicitly add remapped `RUF025` -> `C420`
https://github.com/astral-sh/ruff/releases/tag/0.6.0

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -231,7 +231,9 @@ extend-safe-fixes=[
     # ends-in-period
     "D400",
     # missing-return-type-special-method 
-    "ANN204"
+    "ANN204",
+    # unnecessary-dict-comprehension-for-iterable
+    "C420",
 ]
 
 # https://docs.astral.sh/ruff/preview/#using-rules-that-are-in-preview
