revert: Remove `sphinx` version constraint
Didn't fix the issue https://github.com/vega/altair/pull/3515#discussion_r1709995028
Caused a regression when (locally) running `hatch test --all`

Partially reverts https://github.com/vega/altair/pull/3527

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,7 +82,7 @@ dev = [
     "polars>=0.20.3",
 ]
 doc = [
-    "sphinx>=8.0.0",
+    "sphinx",
     "docutils",
     "sphinxext_altair",
     "jinja2",
