ci: Add temporary script for `hatch run validation`
**Remove before review**.

Using for quicker feedback loop, where running mypy and all tests are not beneficial

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -130,6 +130,13 @@ update-init-file = [
     "ruff format .",
 ]
 
+# Much more isolated, focused purely on a faster `schemapi.py` rebuild/test loop.
+validation = [
+    "mypy tools/schemapi/schemapi.py",
+    "python tools/generate_schema_wrapper.py",
+    "pytest -k test_schemapi tests {args}",
+]
+
 [tool.hatch.envs.hatch-test]
 # https://hatch.pypa.io/latest/tutorials/testing/overview/
 features = ["all", "dev", "doc"]
