perf(ruff): Add & ignore some performance rules
Ignoring these *first* for visibility, since I'll be making changes that otherwise have no context

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -257,8 +257,16 @@ extend-select=[
     "PLR1736",
     # literal-membership
     "PLR6201",
+    # unnecessary-lambda
+    "PLW0108",
     # unspecified-encoding
     "PLW1514",
+    # exception handling #
+    # ------------------ #
+    # try-except-pass
+    "S110",
+    # try-except-continue
+    "S112",
 ]
 select = [
     # flake8-bugbear
@@ -324,6 +332,8 @@ select = [
     "I001",
     # complex-structure
     "C901",
+    # Perflint
+    "PERF",
 ]
 ignore = [  
     # Whitespace before ':'
