--- a/pyproject.toml
+++ b/pyproject.toml
@@ -436,3 +436,10 @@ extraPaths=["./tools"]
 pythonPlatform="All"
 pythonVersion="3.8"
 reportUnusedExpression="none"
+include=[
+    "./altair/**/*.py",
+    ".doc/*.py",
+	"./sphinxext/**/*.py",
+	"./tests/**/*.py",
+	"./tools/**/*.py",
+]
