--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,22 +8,22 @@ jobs:
     name: ruff-mypy
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python 3.12
+    - name: Install uv
+      uses: astral-sh/setup-uv@v2
+    - name: "Set up Python"
       uses: actions/setup-python@v5
       with:
-        python-version: "3.12"
+        python-version-file: "pyproject.toml"
     # Installing all dependencies and not just the linters as mypy needs them for type checking
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install hatch
+      run: uv sync --all-extras --dev
     - name: Lint with ruff
       run: |        
-        hatch run ruff check .        
+        uvx ruff check .        
     - name: Check formatting with ruff
       run: |
-        hatch run ruff format --diff .
-        hatch run ruff format --check .
+        uvx ruff format --diff .
+        uvx ruff format --check .
     - name: Lint with mypy
       run: |
-        hatch run mypy altair tests
+        mypy altair tests
