ci: Run `mypy` with `uvx`
https://github.com/dangotbanned/altair/actions/runs/10907431748/job/30271059687

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -26,4 +26,4 @@ jobs:
         uvx ruff format --check .
     - name: Lint with mypy
       run: |
-        mypy altair tests
+        uvx mypy altair tests
