--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -26,4 +26,4 @@ jobs:
         uvx ruff format --check .
     - name: Lint with mypy
       run: |
-        uvx mypy altair tests
+        uv run mypy altair tests
