--- a/.github/release.yml
+++ b/.github/release.yml
@@ -1,5 +1,11 @@
 changelog:
   categories:
+    - title: Breaking
+      labels:
+        - breaking
+    - title: Deprecation
+      labels:
+        - deprecation
     - title: Enhancements
       labels:
         - enhancement
