ci: Temp pin `mypy`
https://github.com/vega/altair/actions/runs/11194134028/job/31120421062?pr=3630

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,7 +74,7 @@ dev = [
     "pytest-cov",
     "pytest-xdist[psutil]~=3.5",
     "mistune",
-    "mypy",
+    "mypy<1.12.0",
     "pandas-stubs",
     "types-jsonschema",
     "types-setuptools",
