--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,7 +74,7 @@ dev = [
     "pytest-cov",
     "pytest-xdist[psutil]~=3.5",
     "mistune",
-    "mypy<1.12.0",
+    "mypy",
     "pandas-stubs",
     "types-jsonschema",
     "types-setuptools",
