Add upper bound on VegaFusion optional dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,7 +60,7 @@ all = [
     "pandas>=0.25.3",
     "numpy",
     "pyarrow>=11",
-    "vegafusion[embed]>=1.6.6",
+    "vegafusion[embed]>=1.6.6,<2",
     "anywidget>=0.9.0",
     "altair_tiles>=0.3.0"
 ]
