fix(typing): Add untyped `vegafusion` to `mypy` overrides
Related https://mypy.readthedocs.io/en/stable/running_mypy.html#missing-library-stubs-or-py-typed-marker

https://github.com/vega/altair/pull/3638#pullrequestreview-2364909390

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -436,6 +436,7 @@ module = [
     "nbformat.*",
     "ipykernel.*",
     "ibis.*",
+    "vegafusion.*",
     # This refers to schemapi in the tools folder which is imported
     # by the tools scripts such as generate_schema_wrapper.py
     # "schemapi.*"
