--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,7 +66,7 @@ all = [
     "altair_tiles>=0.3.0"
 ]
 dev = [
-    "hatch",
+    "hatch>=1.13.0",
     "ruff>=0.6.0",
     "ibis-framework[polars]",
     "ipython[kernel]",
