--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ keywords = [
     "json",
     "vega-lite",
 ]
-requires-python = ">=3.8"
+requires-python = ">=3.9"
 dynamic = ["version"]
 license-files = { paths = ["LICENSE"] }
 classifiers = [
@@ -41,7 +41,6 @@ classifiers = [
     "Intended Audience :: Science/Research",
     "License :: OSI Approved :: BSD License",
     "Natural Language :: English",
-    "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
@@ -145,7 +144,7 @@ features = ["all", "dev", "doc"]
 default-args = ["--numprocesses=logical","--doctest-modules", "tests", "altair"]
 parallel = true
 [[tool.hatch.envs.hatch-test.matrix]]
-python = ["3.8", "3.9", "3.10", "3.11", "3.12"]
+python = ["3.9", "3.10", "3.11", "3.12"]
 [tool.hatch.envs.hatch-test.scripts]
 run = [
     "ruff check .", 
@@ -192,7 +191,7 @@ publish-clean-build = [
 ]
 
 [tool.ruff]
-target-version = "py38"
+target-version = "py39"
 line-length = 88
 indent-width = 4
 exclude = [
@@ -444,7 +443,7 @@ ignore_missing_imports = true
 enableExperimentalFeatures=true
 extraPaths=["./tools"]
 pythonPlatform="All"
-pythonVersion="3.8"
+pythonVersion="3.9"
 reportTypedDictNotRequiredAccess="none"
 reportIncompatibleMethodOverride="none"
 reportUnusedExpression="none"
