ci: Moved `vl-convert-python` to `save` dependency group (#3609)
* Moved `vl-convert-python` to `save` dependency group

* Added `altair[save]` to installation.rst

* Update saving_charts.rst

* Update installation.rst

* Update saving_charts.rst

---------

Co-authored-by: Mattijn van Hoek <mattijn@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,9 +53,12 @@ Documentation = "https://altair-viz.github.io"
 Source = "https://github.com/vega/altair"
 
 [project.optional-dependencies]
-all = [
-    "vega_datasets>=0.9.0",
+save = [
     "vl-convert-python>=1.7.0",
+]
+all = [
+    "altair[save]",
+    "vega_datasets>=0.9.0",
     "pandas>=1.1.3",
     "numpy",
     "pyarrow>=11",
