--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,7 +62,7 @@ all = [
     "vega_datasets>=0.9.0",
     "pandas>=1.1.3",
     "numpy",
-    "pyarrow>=11",
+    "pyarrow>=18",
     "vegafusion[embed]>=1.6.6,<2",
     "anywidget>=0.9.0",
     "altair_tiles>=0.3.0"
@@ -90,7 +90,7 @@ doc = [
     "sphinxext_altair",
     "jinja2",
     "numpydoc",
-    "pillow>=9,<10",
+    "pillow>=11",
     "pydata-sphinx-theme>=0.14.1",
     "myst-parser",
     "sphinx_copybutton",
