ci: Support Python 3.13 (#3591)
* ci: Support Python 3.13

Minimal/fallback support for `3.13`.

Ideally I'd like to minimise hard dependencies we have on `typing_extensions` before October 2024.
However, this would be the simpler option if it passes CI

Resolves https://github.com/vega/altair/issues/3587

* ci: Bump `hatch>=1.13.0`

Adds `python=3.13.*` support
https://github.com/pypa/hatch/releases/tag/hatch-v1.13.0

* ci: Disable `allow-prereleases`

Basising this off of https://github.com/narwhals-dev/narwhals/pull/1094/commits/97ebe2c74d529b6c8fb74bc45dfa17a752268e17

* ci: Bump `pyarrow`, remove `pillow` upper bound

Seems to be able to build (sometimes) with these changes.
Still fails a good chunk of the tests

* revert: (7f11fafe33c1bf483401cc7c903dec67e4b077cf)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
         jsonschema-version: ["3.0", "latest"]
     name: py ${{ matrix.python-version }} js ${{ matrix.jsonschema-version }}
     steps:
