chore(typing): Replace `schema/` ignore with (`channels|mixins`)
Will look at fixing `mixins` after merging https://github.com/vega/altair/pull/3675

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -460,7 +460,8 @@ include=[
 ]
 ignore=[
     "./altair/vegalite/v5/display.py",
-    "./altair/vegalite/v5/schema/",
+    "./altair/vegalite/v5/schema/channels.py",  # 716 warns
+    "./altair/vegalite/v5/schema/mixins.py",    # 1001 warns
     "./altair/utils/core.py",
     "./altair/jupyter/",
     "./sphinxext/",
