--- a/pyproject.toml
+++ b/pyproject.toml
@@ -420,10 +420,14 @@ docstring-code-line-length = 88
 # They contain examples which are being executed by the
 # test_examples tests.
 norecursedirs = ["tests/examples_arguments_syntax", "tests/examples_methods_syntax"]
-addopts = ["--numprocesses=logical"]
+addopts = [
+    "--numprocesses=logical",
+    "-m not datasets_debug"
+]
 # https://docs.pytest.org/en/stable/how-to/mark.html#registering-marks
 markers = [
-    "slow: Label tests as slow (deselect with '-m \"not slow\"')"
+    "slow: Label tests as slow (deselect with '-m \"not slow\"')",
+    "datasets_debug: Disabled by default due to high number of requests"
 ]
 
 [tool.mypy]
