feat: Update for `v2.11.0`
https://github.com/vega/vega-datasets/releases/tag/v2.11.0
Includes support for `.parquet` following:
- https://github.com/vega/vega-datasets/pull/628
- https://github.com/vega/vega-datasets/issues/627

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -250,6 +250,8 @@ extend-safe-fixes=[
     "ANN204",
     # unnecessary-dict-comprehension-for-iterable
     "C420",
+    # unnecessary-literal-set
+    "C405"
 ]
 
 # https://docs.astral.sh/ruff/preview/#using-rules-that-are-in-preview
