--- a/pyproject.toml
+++ b/pyproject.toml
@@ -378,7 +378,9 @@ ignore = [
     # doc-line-too-long
     "W505",
     # Any as annotation
-    "ANN401" 
+    "ANN401",
+    # 0.8.0
+    "RUF039", "RUF200"
 ]
 # https://docs.astral.sh/ruff/settings/#lintpydocstyle
 pydocstyle={ convention="numpy" }
