revert(ruff): Ignore `0.8.0` violations
f21b52b6c932c517383de02087f75228af0f7a28

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -377,9 +377,7 @@ ignore = [
     # doc-line-too-long
     "W505",
     # Any as annotation
-    "ANN401",
-    # 0.8.0
-    "RUF039", "RUF200"
+    "ANN401" 
 ]
 # https://docs.astral.sh/ruff/settings/#lintpydocstyle
 pydocstyle={ convention="numpy" }
