--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -7,23 +7,22 @@ jobs:
     runs-on: ubuntu-latest
     name: ruff-mypy
     steps:
-    - uses: actions/checkout@v4
-    - name: Install uv
-      uses: astral-sh/setup-uv@v3
     - name: "Set up Python"
       uses: actions/setup-python@v5
       with:
         python-version-file: "pyproject.toml"
+    - uses: actions/checkout@v4
+    - name: Install uv
+      uses: astral-sh/setup-uv@v4
     # Installing all dependencies and not just the linters as mypy needs them for type checking
     - name: Install dependencies
-      run: uv sync --extra all --extra dev
+      run: uv pip install -e ".[dev, all]" --system
     - name: Lint with ruff
       run: |        
-        uvx ruff check .        
+        uv run ruff check
     - name: Check formatting with ruff
       run: |
-        uvx ruff format --diff .
-        uvx ruff format --check .
+        uv run ruff format --check --diff
     - name: Lint with mypy
       run: |
         uv run mypy altair tests
