--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Test that schema generation has no effect
         run: |
           uv pip install vl-convert-python
-          uv run python tools/generate_schema_wrapper.py
+          python tools/generate_schema_wrapper.py
           # This gets the paths of all files which were either deleted, modified
           # or are not yet tracked by Git
           files=`git ls-files --deleted --modified --others --exclude-standard`
