--- a/.github/workflows/docbuild.yml
+++ b/.github/workflows/docbuild.yml
@@ -2,6 +2,9 @@ name: docbuild
 
 on: [push, pull_request]
 
+env:
+  UV_SYSTEM_PYTHON: 1
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -11,15 +14,16 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: "3.12"
+    - name: Install uv
+      uses: astral-sh/setup-uv@v4
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install hatch
+      run: uv pip install -e ".[dev, all, doc]"
     - name: Run doc:build-html
       run: |
-        hatch run doc:build-html
+        mkdir -p doc/_images
+        uv run sphinx-build -b html -d doc/_build/doctrees doc doc/_build/html
     - name: Run doc:doctest
       run: |
-        hatch run doc:doctest
+        uv run sphinx-build -b doctest -d doc/_build/doctrees doc doc/_build/doctest
 
         
